relation: add support for pivot() (#2979)
* relation: add function pivot()

* relation: add support for pivot() in duckdb

* relation: support casting to relation type

* relation: rebase and fix bugs with composition

* repl: add typeahead support for pivot() and cast()

* exec-plan: only set isResultColumnsDynamic when needed